<resources>
    <string name="app_name">Carpooler</string>


    <string name="proximity_label_for_driver_start">2. Show passengers no further than</string>
    <string name="proximity_label_for_driver_end">km from me.</string>

    <string name="proximity_label_for_passenger_start">2. Driver\'s destination no further than</string>
    <string name="proximity_label_for_passenger_end">km from my destination.</string>


    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">User name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- HTTP Settings: -->
    <string name="pref_header_http">HTTP Settings</string>

    <string name="pref_http_title_server">Server Host:Port</string>
    <string-array name="pref_http_server_titles">
        <item>Emulator</item>
        <item>Local</item>
        <item>Remote</item>
    </string-array>

    <string name="pref_http_title_emulator_addr">Emulator</string>
    <string name="pref_http_default_emulator_addr">10.0.2.2:8080</string>

    <string name="pref_http_title_local_addr">Local</string>
    <string name="pref_http_default_local_addr">192.168.178.58:8080</string>

    <string name="pref_http_title_remote_addr">Remote</string>
    <string name="pref_http_default_remote_addr">raptor2.aut.ac.nz:8080</string>


    <!-- Map Settings -->
    <string name="pref_header_map">Map Settings</string>

    <string name="pref_map_title_refresh">Refresh interval (milliseconds)</string>
    <string name="pref_map_default_refresh">4000</string>


    <!-- Private user cache filename -->
    <string name="user_file_name">User</string>

</resources>
