<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="Local"
        android:entries="@array/pref_http_server_titles"
        android:entryValues="@array/pref_http_server_titles"
        android:key="http_server"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_http_title_server" />

    <EditTextPreference
        android:defaultValue="@string/pref_http_default_emulator_addr"
        android:inputType="textUri"
        android:key="emulator_addr"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_http_title_emulator_addr" />

    <EditTextPreference
        android:defaultValue="@string/pref_http_default_local_addr"
        android:inputType="textUri"
        android:key="local_addr"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_http_title_local_addr" />

    <EditTextPreference
        android:defaultValue="@string/pref_http_default_remote_addr"
        android:inputType="textUri"
        android:key="remote_addr"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_http_title_remote_addr" />

</PreferenceScreen>